# claude-codebase-indexer

./: .gitignore  README.md  pyproject.toml  requirements.txt
claude_index/: default__vector_store.json  docstore.json  index_store.json  metadata.json
src/: __init__.py
src/cli/: __init__.py  main.py  search.py
src/indexer/: __init__.py  core.py  dummy_embedder.py
src/integration/: __init__.py  claude.py
src/search/: __init__.py  engine.py
